apps/services/homeassistant/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-nginx
  namespace: edge
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: home-assistant-nginx
