apps/services/homeassistant/base/route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: edge
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.tuntelder.com`)
      kind: Rule
      services:
        - name: home-assistant-nginx
          port: 80
      middlewares:
        - name: crowdsec-mw
          namespace: edge

  tls:
    certResolver: letsencrypt
